--- a/Agno(phidata)/.env
+++ b/Agno(phidata)/.env
@@ -1,11 +1,11 @@
 OPENAI_API_KEY="xxxxx"
-QDRANT_URL="https://a11344e9-1dcf-41c9-a787-68f3ba64361e.us-east4-0.gcp.cloud.qdrant.io"
-QDRANT_API_KEY="r7VrVEfwUgHeNfsTGrPt-eYWtGFqKQKKRFYLaKLwo4hGKiQ78sH6CA"
+QDRANT_URL=""
+QDRANT_API_KEY=""
 QDRANT_URL_LOCALHOST="xxxxx"
-Groq_API_Key = "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"
-Phi_API_Key = "phi-5JdDlv74NV2Zqyb_iaKkrizMXlg3fX41ECAJQIIzq5E"
+Groq_API_Key = ""
+Phi_API_Key = ""
 
-AZURE_OPENAI_API_KEY = 'a1bc68846e11495baa8eb2ef47ba37a2'
-AZURE_OPENAI_ENDPOINT = "https://aoi-gptxponent-sc.openai.azure.com/openai/deployments/gpt-4o/chat/completions?api-version=2024-08-01-preview"
+AZURE_OPENAI_API_KEY = ''
+AZURE_OPENAI_ENDPOINT = ""
 AZURE_OPENAI_MODEL_NAME = 'gpt-4o'
 AZURE_OPENAI_DEPLOYMENT = 'gpt-4o'
